--- a/main.css
+++ b/main.css
@@ -22,6 +22,15 @@
   background-color: #fff;
 }
 
+.home {
+  background-image: url("assets/images/Concert-crowd.jpg");
+  width: 100vw;
+  height: 66vh;
+  margin-top: 50px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 @media screen and (min-width: 768px) {
   .nav_container {
     background-color: #272a31;
@@ -67,5 +76,9 @@
     z-index: 9;
     width: 20px;
     height: 20px;
+  }
+  .home {
+    margin-top: 75px;
+    height: 86vh;
   }
 }/*# sourceMappingURL=main.css.map */
