--- a/main.scss
+++ b/main.scss
@@ -26,6 +26,14 @@ $grey: #d3d3d3;
   height: 25px;
   background-color: #fff;
 }
+.home {
+  background-image: url('assets/images/Concert-crowd.jpg');
+  width: 100vw;
+  height: 66vh;
+  margin-top: 50px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 @media screen and (min-width: 768px) {
   
@@ -84,4 +92,12 @@ $grey: #d3d3d3;
   width: 20px;
   height: 20px;
 }
+
+.home {
+  margin-top: 75px;
+  height: 86vh;
+ 
+
+}
+
 }
