--- a/main.css
+++ b/main.css
@@ -3,6 +3,12 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Lato", sans-serif;
+}
+
+h1 {
+  font-size: 60px;
+  font-weight: 700;
 }
 
 .nav_container {
@@ -25,10 +31,30 @@
 .home {
   background-image: url("assets/images/Concert-crowd.jpg");
   width: 100vw;
-  height: 66vh;
+  height: 80vh;
   margin-top: 50px;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.overlay {
+  background-color: rgba(211, 211, 211, 0.8);
+  width: 100vw;
+  height: 80vh;
+  margin-top: 50px;
+}
+
+.home-text {
+  margin: 0 0 0 20%;
+  padding-top: 15%;
+  color: #ec5242;
+  font-weight: 900;
+  line-height: 200%;
+  text-shadow: 0 0 5px #fff, 0 0 5px #fff, 0 0 22px rgb(255, 51, 0), 0 0 42px rgb(255, 0, 21),0 0 42px #0fa;
+}
+
+.home-text h3 {
+  font-size: 3em;
 }
 
 @media screen and (min-width: 768px) {
@@ -78,6 +104,12 @@
     height: 20px;
   }
   .home {
+    margin-top: 75px;
+    height: 86vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .overlay {
     margin-top: 75px;
     height: 86vh;
   }
