--- a/main.scss
+++ b/main.scss
@@ -8,6 +8,11 @@ $grey: #d3d3d3;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Lato', sans-serif;}
+
+h1 {
+  font-size: 60px;
+  font-weight: 700;
 }
 
 .nav_container {
@@ -33,6 +38,23 @@ $grey: #d3d3d3;
   margin-top: 50px;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.overlay {
+  background-color: rgba(211, 211, 211, 0.8);
+  width: 100vw;
+  height: 66vh;
+  margin-top: 50px;
+}
+
+.home-text {
+  margin: 0 0 0 20%;
+  padding-top: 15%;
+  color: #ec5242;
+}
+
+.home-text h3 {
+  font-size: 3em;
 }
 
 @media screen and (min-width: 768px) {
@@ -96,8 +118,14 @@ $grey: #d3d3d3;
 .home {
   margin-top: 75px;
   height: 86vh;
- 
+  // max-width: 1440px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
+.overlay {
+  margin-top: 75px;
+  height: 86vh;
 }
 
 }
