--- a/main.scss
+++ b/main.scss
@@ -31,10 +31,10 @@ h1 {
   height: 25px;
   background-color: #fff;
 }
-.home {
+.home-top {
   background-image: url('assets/images/Concert-crowd.jpg');
   width: 100vw;
-  height: 66vh;
+  height: 80vh;
   margin-top: 50px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -43,7 +43,7 @@ h1 {
 .overlay {
   background-color: rgba(211, 211, 211, 0.8);
   width: 100vw;
-  height: 66vh;
+  height: 80vh;
   margin-top: 50px;
 }
 
@@ -51,10 +51,19 @@ h1 {
   margin: 0 0 0 20%;
   padding-top: 15%;
   color: #ec5242;
+  text-shadow: 0 0 5px #fff, 0 0 5px #fff, 0 0 20px rgb(255, 38, 0), 0 0 42px rgb(255, 153, 0),0 0 42px rgb(244, 247, 246);
 }
 
 .home-text h3 {
   font-size: 3em;
+}
+
+.home2 {
+  background-image: url('assets/images/background2.jpg');
+  width: 100vw;
+  height: 80vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 @media screen and (min-width: 768px) {
@@ -115,10 +124,9 @@ h1 {
   height: 20px;
 }
 
-.home {
+.home-top {
   margin-top: 75px;
   height: 86vh;
-  // max-width: 1440px;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -126,6 +134,10 @@ h1 {
 .overlay {
   margin-top: 75px;
   height: 86vh;
+}
+
+.home2 {
+  height: 60vh;
 }
 
 }
