--- a/main.css
+++ b/main.css
@@ -58,10 +58,13 @@ h1 {
 .home2 {
   background-image: url("assets/images/background2.jpg");
   width: 100vw;
-  height: 85vh;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   background-repeat: no-repeat;
   background-size: cover;
   color: #fff;
+  padding-bottom: 100PX;
 }
 
 .home2 > p {
@@ -69,7 +72,6 @@ h1 {
   padding-top: 5%;
   z-index: 2;
   margin: 0;
-  font-size: 1.8em;
 }
 
 .line {
@@ -121,6 +123,17 @@ img {
   width: 75px;
   height: 50px;
   margin: 20px;
+}
+
+.no-display {
+  display: none;
+}
+
+.join-btn {
+  background-color: #ec5242;
+  color: #fff;
+  padding: 30px;
+  border: none;
 }
 
 @media screen and (min-width: 768px) {
@@ -180,7 +193,9 @@ img {
     height: 86vh;
   }
   .home2 {
-    height: 70vh;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
   }
   .card-box {
     display: flex;
@@ -198,5 +213,15 @@ img {
     align-items: center;
     padding: 10px;
     gap: 10px;
+  }
+  .no-display {
+    display: block;
+    font-size: 0.8em;
+    text-decoration: underline;
+  }
+  .join-btn {
+    display: none;
+    align-content: center;
+    margin: 60px 15% 0 15%;
   }
 }/*# sourceMappingURL=main.css.map */
