--- a/main.css
+++ b/main.css
@@ -134,6 +134,11 @@ img {
   color: #fff;
   padding: 30px;
   border: none;
+  margin: 60px 0 0 0;
+}
+
+.btn-div {
+  background-color: none;
 }
 
 @media screen and (min-width: 768px) {
@@ -221,7 +226,5 @@ img {
   }
   .join-btn {
     display: none;
-    align-content: center;
-    margin: 60px 15% 0 15%;
   }
 }/*# sourceMappingURL=main.css.map */
