--- a/main.scss
+++ b/main.scss
@@ -66,7 +66,6 @@ h1 {
   background-size: cover;
   color: #fff;
   padding-bottom: 100PX;
-
 }
 
 .home2 > p {
@@ -130,7 +129,6 @@ img {
 
 .no-display {
   display: none;
-  // font-size: 2em;
 }
 
 .join-btn {
@@ -138,6 +136,11 @@ img {
   color: #fff;
   padding: 30px;
   border: none;
+  margin: 60px 0 0 0;
+}
+
+.btn-div {
+  background-color: none;
 }
 
 @media screen and (min-width: 768px) {
@@ -241,8 +244,6 @@ img {
 
 .join-btn {
   display: none;
-  align-content: center;
-  margin: 60px 15% 0 15%;
 }
 
 }
