--- a/main.css
+++ b/main.css
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Crete+Round:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap");
 * {
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
   font-family: "Lato", sans-serif;
+}
+
+html {
+  margin: 0 auto;
 }
 
 h1 {
@@ -31,8 +34,21 @@ h1 {
 .home-top {
   background-image: url("assets/images/Concert-crowd.jpg");
   width: 100vw;
-  height: 80vh;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   margin-top: 50px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-content: center;
+}
+
+.page-about {
+  background-image: url("assets/images/Concert-crowd.jpg");
+  width: 100vw;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -40,19 +56,39 @@ h1 {
 .overlay {
   background-color: rgba(211, 211, 211, 0.8);
   width: 100vw;
-  height: 80vh;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding-bottom: 100px;
   margin-top: 50px;
 }
 
 .home-text {
-  margin: 0 0 0 20%;
+  margin: 0 0 0 10%;
   padding-top: 15%;
   color: #ec5242;
   text-shadow: 0 0 5px #fff, 0 0 5px #fff, 0 0 20px rgb(255, 38, 0), 0 0 42px rgb(255, 153, 0), 0 0 42px rgb(244, 247, 246);
 }
 
+.home-p {
+  border: 2px solid #d3d3d3;
+  width: 95vw;
+  align-content: center;
+  margin: 20px;
+  padding: 25px;
+  font-weight: 600;
+}
+
+.about-text {
+  text-shadow: none;
+}
+
 .home-text h3 {
   font-size: 3em;
+}
+
+.about-text h3 {
+  font-size: 2em;
 }
 
 .home2 {
@@ -95,15 +131,15 @@ h1 {
 .box {
   display: flex;
   flex-direction: row;
-  width: 90%;
   background-color: rgba(39, 42, 49, 0.8);
   align-items: center;
   padding: 10px;
-  gap: 10px;
+  gap: 10px 0 0 0;
 }
 
 h6 {
   color: #ec5242;
+  font-size: 0.9em;
 }
 
 .box-p {
@@ -213,7 +249,7 @@ img {
     display: flex;
     flex-direction: column;
     width: 90%;
-    height: 350px;
+    height: 430px;
     background-color: rgba(39, 42, 49, 0.8);
     align-items: center;
     padding: 10px;
