--- a/main.css
+++ b/main.css
@@ -1,12 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Crete+Round:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap");
 * {
   box-sizing: border-box;
-  padding: 0;
   font-family: "Lato", sans-serif;
 }
 
 html {
   margin: 0 auto;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -61,6 +62,8 @@ h1 {
   height: fit-content;
   padding-bottom: 100px;
   margin-top: 50px;
+  align-items: center;
+  justify-content: center;
 }
 
 .home-text {
@@ -72,11 +75,35 @@ h1 {
 
 .home-p {
   border: 2px solid #d3d3d3;
-  width: 95vw;
+  width: 80vw;
   align-content: center;
-  margin: 20px;
+  margin: 0 0 0 10%;
   padding: 25px;
   font-weight: 600;
+  color: #272a31;
+}
+
+.home-p2 {
+  width: 80vw;
+  align-content: center;
+  margin: 0 0 0 10%;
+  padding: 25px;
+  font-weight: 600;
+  color: #272a31;
+}
+
+.about-p2 {
+  width: 80vw;
+  align-content: center;
+  margin: 0 0 0 10%;
+  padding: 25px;
+  font-weight: 400;
+  color: #272a31;
+}
+
+span {
+  font-size: 2em;
+  font-weight: 700;
 }
 
 .about-text {
@@ -137,6 +164,10 @@ h1 {
   gap: 10px 0 0 0;
 }
 
+.card-box :hover {
+  border: 2px solid #d3d3d3;
+}
+
 h6 {
   color: #ec5242;
   font-size: 0.9em;
@@ -175,6 +206,40 @@ img {
 
 .btn-div {
   background-color: none;
+}
+
+footer {
+  background-color: #272a31;
+  width: 100vw;
+  height: 200px;
+  color: #d3d3d3;
+  text-align: center;
+  padding-top: 50px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 110px;
+}
+
+.foot-p {
+  display: none;
+}
+
+.sponsor {
+  display: flex;
+  gap: 20px;
+}
+
+.sponsor > img {
+  width: 60px;
+  height: 60px;
+}
+
+#sp1 {
+  width: 90px;
+}
+
+#sp2 {
+  width: 90px;
 }
 
 @media screen and (min-width: 768px) {
@@ -225,13 +290,27 @@ img {
   }
   .home-top {
     margin-top: 75px;
-    height: 86vh;
+    width: 100vw;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
     background-repeat: no-repeat;
     background-size: cover;
   }
   .overlay {
     margin-top: 75px;
-    height: 86vh;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    padding-bottom: 100px;
+  }
+  .home-p {
+    border: 2px solid #d3d3d3;
+    width: 50vw;
+    align-content: center;
+    margin: 0 0 0 10%;
+    padding: 25px;
+    font-weight: 600;
   }
   .home2 {
     height: -webkit-fit-content;
@@ -262,5 +341,13 @@ img {
   }
   .join-btn {
     display: none;
+  }
+  footer {
+    background-color: #272a31;
+    width: 100vw;
+    height: 200px;
+    color: #d3d3d3;
+    text-align: center;
+    padding-top: 100px;
   }
 }/*# sourceMappingURL=main.css.map */
