--- a/main.css
+++ b/main.css
@@ -226,10 +226,10 @@ footer {
   height: 200px;
   color: #d3d3d3;
   text-align: center;
-  padding-top: 50px;
+  padding-top: 70px;
   justify-content: center;
   align-items: center;
-  padding-left: 110px;
+  padding-left: 80px;
 }
 
 .foot-p {
@@ -238,7 +238,7 @@ footer {
 
 .sponsor {
   display: flex;
-  gap: 20px;
+  gap: 40px;
 }
 
 .sponsor > img {
@@ -247,10 +247,14 @@ footer {
 }
 
 #sp1 {
-  width: 90px;
+  width: 120px;
 }
 
 #sp2 {
+  width: 110px;
+}
+
+#sp3 {
   width: 90px;
 }
 
