--- a/main.scss
+++ b/main.scss
@@ -223,10 +223,10 @@ footer {
   height: 200px;
   color: $grey;
   text-align: center;
-  padding-top: 50px;
+  padding-top: 70px;
   justify-content: center;
   align-items: center;
-  padding-left: 110px;
+  padding-left: 80px;
 }
 
 .foot-p {
@@ -235,7 +235,7 @@ footer {
 
 .sponsor {
   display: flex;
-  gap: 20px;
+  gap: 40px;
 }
 
 .sponsor>img {
@@ -244,10 +244,14 @@ footer {
 }
 
 #sp1 {
-  width: 90px;
+  width: 120px;
 }
 
 #sp2 {
+  width: 110px;
+}
+
+#sp3 {
   width: 90px;
 }
 
