--- a/main.css
+++ b/main.css
@@ -38,6 +38,47 @@ h1 {
   cursor: pointer;
 }
 
+.menu_opt {
+  display: none;
+  background-color: rgba(39, 42, 49, 0.2);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  z-index: 11;
+  width: 100%;
+  padding: 20px 20px 0 30px;
+  position: fixed;
+}
+
+.menu_opt a {
+  color: rgb(39, 42, 49);
+  text-decoration: none;
+  font-size: 1.2em;
+  font-weight: 700;
+}
+
+.menu_items {
+  margin-bottom: 50px;
+  padding: 10px;
+  list-style-type: none;
+  margin-top: 50px;
+}
+
+.menu_list {
+  width: 100px;
+}
+
+.close_menu {
+  float: right;
+  background-color: rgba(236, 82, 66, 0.2);
+  border: none;
+  color: #fff;
+  width: 30px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  cursor: pointer;
+}
+
 .home-top {
   background-image: url("assets/images/Concert-crowd.jpg");
   width: 100vw;
@@ -87,7 +128,7 @@ h1 {
   margin: 0 0 0 10%;
   padding: 25px;
   font-weight: 600;
-  color: #272a31;
+  color: rgb(39, 42, 49);
 }
 
 .home-p2 {
@@ -96,7 +137,7 @@ h1 {
   margin: 0 0 0 10%;
   padding: 25px;
   font-weight: 600;
-  color: #272a31;
+  color: rgb(39, 42, 49);
 }
 
 .about-p2 {
@@ -105,7 +146,7 @@ h1 {
   margin: 0 0 0 10%;
   padding: 25px;
   font-weight: 400;
-  color: #272a31;
+  color: rgb(39, 42, 49);
 }
 
 span {
@@ -221,7 +262,7 @@ img {
 }
 
 footer {
-  background-color: #272a31;
+  background-color: rgb(39, 42, 49);
   width: 100vw;
   height: 200px;
   color: #d3d3d3;
@@ -239,6 +280,11 @@ footer {
 .sponsor {
   display: flex;
   gap: 40px;
+}
+
+hr {
+  color: #ec5242;
+  width: 300px;
 }
 
 .sponsor > img {
@@ -260,7 +306,7 @@ footer {
 
 @media screen and (min-width: 768px) {
   .nav_container {
-    background-color: #272a31;
+    background-color: rgb(39, 42, 49);
   }
   .menu {
     display: none;
@@ -278,7 +324,7 @@ footer {
     text-decoration: none;
   }
   .nav-link2 {
-    color: #272a31;
+    color: rgb(39, 42, 49);
     text-decoration: none;
   }
   .logo {
@@ -290,14 +336,14 @@ footer {
     color: #fff;
   }
   .nav1 {
-    background-color: #272a31;
+    background-color: rgb(39, 42, 49);
   }
   .nav2 {
     margin-top: 24px;
     background-color: #fff;
   }
   .nav2-item {
-    color: #272a31;
+    color: rgb(39, 42, 49);
   }
   .nav-icons {
     z-index: 9;
@@ -360,7 +406,7 @@ footer {
     display: none;
   }
   footer {
-    background-color: #272a31;
+    background-color: rgb(39, 42, 49);
     width: 100vw;
     height: 200px;
     color: #d3d3d3;
