--- a/main.scss
+++ b/main.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Crete+Round:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap');
 
 $orange: #ec5242;
-$black: #272a31;
+$black: rgb(39, 42, 49);
 $grey: #d3d3d3;
 
 * {
@@ -40,6 +40,47 @@ h1 {
   margin: 15px 0 0 15px;
   width: 25px;
   height: 25px;
+  cursor: pointer;
+}
+
+.menu_opt {
+  display: none;
+  background-color: rgba(39, 42, 49, 0.2);
+  backdrop-filter: blur(10px);
+  z-index: 11;
+  width: 100%;
+  // height: 100vh;
+  padding: 20px 20px 0 30px;
+  position: fixed;
+}
+
+.menu_opt a {
+  color: $black;
+  text-decoration: none;
+  font-size: 1.2em;
+  font-weight: 700;
+}
+
+.menu_items {
+  margin-bottom: 50px;
+  padding: 10px;
+  list-style-type: none;
+  margin-top: 50px;
+}
+
+.menu_list {
+  width: 100px;
+}
+
+.close_menu {
+  float: right;
+  background-color: rgba(236, 82, 66, 0.2);
+  border: none;
+  color: #fff;
+  width: 30px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
   cursor: pointer;
 }
 
@@ -236,6 +277,11 @@ footer {
 .sponsor {
   display: flex;
   gap: 40px;
+}
+
+hr {
+  color: #ec5242;
+  width: 300px;
 }
 
 .sponsor>img {
