--- a/main.scss
+++ b/main.scss
@@ -265,24 +265,28 @@ footer {
   height: 200px;
   color: $grey;
   text-align: center;
-  padding-top: 70px;
   justify-content: center;
   align-items: center;
-  padding-left: 80px;
+  padding: 30px 18% 0 18%;
 }
 
 .foot-p {
-  display: none;
+margin-top: 20px;
+font-size: 0.8em;
+}
+
+.spon-h {
+
 }
 
 .sponsor {
   display: flex;
-  gap: 40px;
+  gap: 5%;
 }
 
 hr {
   color: #ec5242;
-  width: 300px;
+  width: 100%;
 }
 
 .sponsor>img {
@@ -291,15 +295,15 @@ hr {
 }
 
 #sp1 {
-  width: 120px;
+  min-width: 120px;
 }
 
 #sp2 {
-  width: 110px;
+  min-width: 110px;
 }
 
 #sp3 {
-  width: 90px;
+  min-width: 90px;
 }
 
 .card_img {
@@ -314,7 +318,7 @@ hr {
 }
 
 .txt-div {
-  width: 300px;
+  width: 65%;
 }
 
 .card-h {
@@ -464,7 +468,7 @@ hr {
     display: block;
   }
 
-  .sponsor {
+  .hide {
     display: none;
   }
 
