--- a/main.css
+++ b/main.css
@@ -261,6 +261,10 @@ img {
   background-color: none;
 }
 
+.artists {
+  flex-direction: column;
+}
+
 footer {
   background-color: rgb(39, 42, 49);
   width: 100vw;
@@ -275,6 +279,10 @@ footer {
 .foot-p {
   margin-top: 20px;
   font-size: 0.8em;
+}
+
+.spon-h {
+  font-weight: 700;
 }
 
 .sponsor {
@@ -425,7 +433,10 @@ hr {
     display: flex;
     flex-direction: column;
     width: 90%;
-    height: 430px;
+    min-height: 300px;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
     background-color: rgba(39, 42, 49, 0.8);
     align-items: center;
     padding: 10px;
@@ -438,6 +449,9 @@ hr {
   }
   .join-btn {
     display: none;
+  }
+  .artists {
+    display: table;
   }
   footer {
     background-color: rgb(39, 42, 49);
