--- a/main.css
+++ b/main.css
@@ -45,6 +45,7 @@ h1 {
           backdrop-filter: blur(10px);
   z-index: 11;
   width: 100%;
+  height: 100vh;
   padding: 20px 20px 0 30px;
   position: fixed;
 }
@@ -312,6 +313,15 @@ hr {
   min-width: 90px;
 }
 
+.cards {
+  display: flex;
+  flex-direction: column;
+}
+
+.all-cards {
+  display: flex;
+}
+
 .card_img {
   width: 100px;
   height: 150px;
@@ -442,6 +452,14 @@ hr {
     padding: 10px;
     gap: 10px;
   }
+  .artists {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-gap: 10px;
+  }
+  .all-cards {
+    display: flex;
+  }
   .no-display {
     display: block;
     font-size: 0.8em;
@@ -449,9 +467,6 @@ hr {
   }
   .join-btn {
     display: none;
-  }
-  .artists {
-    display: table;
   }
   footer {
     background-color: rgb(39, 42, 49);
