added effects on images

--- a/main.css
+++ b/main.css
@@ -316,6 +316,7 @@ hr {
 .cards {
   display: flex;
   flex-direction: column;
+  padding-bottom: 20px;
 }
 
 .all-cards {
@@ -324,8 +325,15 @@ hr {
 
 .card_img {
   width: 100px;
-  height: 150px;
+  height: 100px;
   background-size: cover;
+  border: 1px solid #ec5242;
+  box-shadow: 10px 10px 12px #ec5242;
+}
+
+.img-div :hover {
+  width: 7em;
+  height: 7em;
 }
 
 .img-div {
@@ -348,12 +356,14 @@ hr {
   font-weight: 400;
   font-size: 0.8em;
   font-style: italic;
+  line-height: 18px;
 }
 
 .card-p2 {
   color: rgb(39, 42, 49);
   font-weight: 400;
   font-size: 0.8em;
+  line-height: 15px;
 }
 
 @media screen and (min-width: 768px) {
