--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Crete+Round:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap");
+
 * {
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
@@ -19,7 +20,7 @@ h1 {
   display: none;
 }
 
-.nav_container > ul {
+.nav_container>ul {
   display: none;
 }
 
@@ -42,7 +43,7 @@ h1 {
   display: none;
   background-color: rgba(39, 42, 49, 0.2);
   -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
   z-index: 11;
   width: 100%;
   height: 100vh;
@@ -83,8 +84,6 @@ h1 {
 .home-top {
   background-image: url("assets/images/Concert-crowd.jpg");
   width: 100vw;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   margin-top: 0;
   background-repeat: no-repeat;
@@ -95,8 +94,6 @@ h1 {
 .page-about {
   background-image: url("assets/images/Concert-crowd.jpg");
   width: 100vw;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   background-repeat: no-repeat;
   background-size: cover;
@@ -105,8 +102,6 @@ h1 {
 .overlay {
   background-color: rgba(211, 211, 211, 0.8);
   width: 100vw;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   padding-bottom: 100px;
   padding-right: 30px;
@@ -170,8 +165,6 @@ span {
 .home2 {
   background-image: url("assets/images/background2.jpg");
   width: 100vw;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   background-repeat: no-repeat;
   background-size: cover;
@@ -180,7 +173,7 @@ span {
   padding-bottom: 100px;
 }
 
-.home2 > p {
+.home2>p {
   text-align: center;
   padding-top: 5%;
   z-index: 2;
@@ -188,7 +181,6 @@ span {
 }
 
 .line {
-  width: 50px;
   height: auto;
   z-index: 3;
   margin: auto;
@@ -231,7 +223,7 @@ h6 {
   padding-left: 20px;
 }
 
-.box-p > p {
+.box-p>p {
   font-size: 0.9em;
 }
 
@@ -256,10 +248,6 @@ img {
   padding: 30px;
   border: none;
   margin: 60px 0 0 0;
-}
-
-.btn-div {
-  background-color: none;
 }
 
 .artists {
@@ -296,7 +284,7 @@ hr {
   width: 100%;
 }
 
-.sponsor > img {
+.sponsor>img {
   width: 60px;
   height: 60px;
 }
@@ -367,13 +355,16 @@ hr {
 }
 
 @media screen and (min-width: 768px) {
+
   .nav_container {
     background-color: rgb(39, 42, 49);
   }
+
   .menu {
     display: none;
   }
-  .nav_container > ul {
+
+  .nav_container>ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
@@ -381,37 +372,46 @@ hr {
     gap: 40px;
     margin-bottom: 0;
   }
+
   .nav-link1 {
     color: #fff;
     text-decoration: none;
   }
+
   .nav-link2 {
     color: rgb(39, 42, 49);
     text-decoration: none;
   }
+
   .logo {
     border: 2px solid #ec5242;
     color: #ec5242;
     padding: 0 5px;
   }
+
   .nav-links :hover {
     color: #fff;
   }
+
   .nav1 {
     background-color: rgb(39, 42, 49);
   }
+
   .nav2 {
     margin-top: 24px;
     background-color: #fff;
   }
+
   .nav2-item {
     color: rgb(39, 42, 49);
   }
+
   .nav-icons {
     z-index: 9;
     width: 20px;
     height: 20px;
   }
+
   .home-top {
     margin-top: 50px;
     width: 100vw;
@@ -422,6 +422,7 @@ hr {
     background-repeat: no-repeat;
     background-size: cover;
   }
+
   .overlay {
     margin-top: 50px;
     height: -webkit-fit-content;
@@ -429,6 +430,7 @@ hr {
     height: fit-content;
     padding-bottom: 100px;
   }
+
   .home-p {
     border: 2px solid #d3d3d3;
     width: 50vw;
@@ -437,11 +439,13 @@ hr {
     padding: 25px;
     font-weight: 600;
   }
+
   .home2 {
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
   }
+
   .card-box {
     display: flex;
     flex-direction: row;
@@ -449,6 +453,7 @@ hr {
     align-content: center;
     padding: 0 10vw;
   }
+
   .box {
     display: flex;
     flex-direction: column;
@@ -462,22 +467,27 @@ hr {
     padding: 10px;
     gap: 10px;
   }
+
   .artists {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-gap: 10px;
   }
+
   .all-cards {
     display: flex;
   }
+
   .no-display {
     display: block;
     font-size: 0.8em;
     text-decoration: underline;
   }
+
   .join-btn {
     display: none;
   }
+
   footer {
     background-color: rgb(39, 42, 49);
     width: 100vw;
@@ -486,10 +496,14 @@ hr {
     text-align: center;
     padding-top: 100px;
   }
+
   .foot-p {
     display: block;
   }
+
   .hide {
     display: none;
   }
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
