--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ h1 {
   display: none;
 }
 
-.nav_container>ul {
+.nav_container > ul {
   display: none;
 }
 
@@ -84,7 +84,7 @@ h1 {
 .home-top {
   background-image: url("assets/images/Concert-crowd.jpg");
   width: 100vw;
-  height: fit-content;
+  height: auto;
   margin-top: 0;
   background-repeat: no-repeat;
   background-size: cover;
@@ -94,7 +94,7 @@ h1 {
 .page-about {
   background-image: url("assets/images/Concert-crowd.jpg");
   width: 100vw;
-  height: fit-content;
+  height: auto;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -102,7 +102,7 @@ h1 {
 .overlay {
   background-color: rgba(211, 211, 211, 0.8);
   width: 100vw;
-  height: fit-content;
+  height: auto;
   padding-bottom: 100px;
   padding-right: 30px;
   margin-top: 0;
@@ -165,7 +165,7 @@ span {
 .home2 {
   background-image: url("assets/images/background2.jpg");
   width: 100vw;
-  height: fit-content;
+  height: auto;
   background-repeat: no-repeat;
   background-size: cover;
   color: #fff;
@@ -173,7 +173,7 @@ span {
   padding-bottom: 100px;
 }
 
-.home2>p {
+.home2 > p {
   text-align: center;
   padding-top: 5%;
   z-index: 2;
@@ -223,7 +223,7 @@ h6 {
   padding-left: 20px;
 }
 
-.box-p>p {
+.box-p > p {
   font-size: 0.9em;
 }
 
@@ -284,7 +284,7 @@ hr {
   width: 100%;
 }
 
-.sponsor>img {
+.sponsor > img {
   width: 60px;
   height: 60px;
 }
@@ -355,7 +355,6 @@ hr {
 }
 
 @media screen and (min-width: 768px) {
-
   .nav_container {
     background-color: rgb(39, 42, 49);
   }
@@ -364,7 +363,7 @@ hr {
     display: none;
   }
 
-  .nav_container>ul {
+  .nav_container > ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
@@ -416,18 +415,14 @@ hr {
     margin-top: 50px;
     width: 100vw;
     margin-top: 50px;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
+    height: auto;
     background-repeat: no-repeat;
     background-size: cover;
   }
 
   .overlay {
     margin-top: 50px;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
+    height: auto;
     padding-bottom: 100px;
   }
 
@@ -441,9 +436,7 @@ hr {
   }
 
   .home2 {
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
+    height: auto;
   }
 
   .card-box {
@@ -459,9 +452,7 @@ hr {
     flex-direction: column;
     width: 90%;
     min-height: 300px;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
+    height: auto;
     background-color: rgba(39, 42, 49, 0.8);
     align-items: center;
     padding: 10px;
