--- a/main.scss
+++ b/main.scss
@@ -88,7 +88,7 @@ h1 {
 .home-top {
   background-image: url('assets/images/Concert-crowd.jpg');
   width: 100vw;
-  height: fit-content;
+  height: auto;
   margin-top: 0;
   background-repeat: no-repeat;
   background-size: cover;
@@ -98,7 +98,7 @@ h1 {
 .page-about {
   background-image: url('assets/images/Concert-crowd.jpg');
   width: 100vw;
-  height: fit-content;
+  height: auto;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -106,7 +106,7 @@ h1 {
 .overlay {
   background-color: rgba(211, 211, 211, 0.8);
   width: 100vw;
-  height: fit-content;
+  height: auto;
   padding-bottom: 100px;
   padding-right: 30px;
   margin-top: 0;
@@ -169,7 +169,7 @@ span {
 .home2 {
   background-image: url('assets/images/background2.jpg');
   width: 100vw;
-  height: fit-content;
+  height: auto;
   background-repeat: no-repeat;
   background-size: cover;
   color: #fff;
@@ -177,7 +177,7 @@ span {
   padding-bottom: 100px;
 }
 
-.home2>p {
+.home2 > p {
   text-align: center;
   padding-top: 5%;
   z-index: 2;
@@ -228,7 +228,7 @@ h6 {
   padding-left: 20px;
 }
 
-.box-p>p {
+.box-p > p {
   font-size: 0.9em;
 }
 
@@ -255,10 +255,6 @@ img {
   margin: 60px 0 0 0;
 }
 
-.btn-div {
-  background-color: none;
-}
-
 .artists {
   flex-direction: column;
 }
@@ -275,12 +271,12 @@ footer {
 }
 
 .foot-p {
-margin-top: 20px;
-font-size: 0.8em;
+  margin-top: 20px;
+  font-size: 0.8em;
 }
 
 .spon-h {
-font-weight: 700;
+  font-weight: 700;
 }
 
 .sponsor {
@@ -293,7 +289,7 @@ hr {
   width: 100%;
 }
 
-.sponsor>img {
+.sponsor > img {
   width: 60px;
   height: 60px;
 }
@@ -364,7 +360,6 @@ hr {
 }
 
 @media screen and (min-width: 768px) {
-
   .nav_container {
     background-color: $black;
   }
@@ -373,7 +368,7 @@ hr {
     display: none;
   }
 
-  .nav_container > ul {
+  .nav_container>ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
@@ -424,15 +419,14 @@ hr {
   .home-top {
     margin-top: 50px;
     width: 100vw;
-    margin-top: 50px;
-    height: fit-content;
+    height: auto;
     background-repeat: no-repeat;
     background-size: cover;
   }
 
   .overlay {
     margin-top: 50px;
-    height: fit-content;
+    height: auto;
     padding-bottom: 100px;
   }
 
@@ -446,7 +440,7 @@ hr {
   }
 
   .home2 {
-    height: fit-content;
+    height: auto;
   }
 
   .card-box {
@@ -462,7 +456,7 @@ hr {
     flex-direction: column;
     width: 90%;
     min-height: 300px;
-    height: fit-content;
+    height: auto;
     background-color: rgba(39, 42, 49, 0.8);
     align-items: center;
     padding: 10px;
@@ -475,9 +469,10 @@ hr {
     grid-gap: 10px;
   }
 
-.all-cards {
-  display: flex;
-}
+  .all-cards {
+    display: flex;
+  }
+
   .no-display {
     display: block;
     font-size: 0.8em;
@@ -504,5 +499,4 @@ hr {
   .hide {
     display: none;
   }
-
 }
