--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Crete+Round:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap');
 
 $orange: #ec5242;
@@ -25,7 +24,7 @@ h1 {
   display: none;
 }
 
-.nav_container > ul {
+.nav_container>ul {
   display: none;
 }
 
@@ -177,7 +176,7 @@ span {
   padding-bottom: 100px;
 }
 
-.home2 > p {
+.home2>p {
   text-align: center;
   padding-top: 5%;
   z-index: 2;
@@ -227,7 +226,7 @@ h6 {
   padding-left: 20px;
 }
 
-.box-p > p {
+.box-p>p {
   font-size: 0.9em;
 }
 
@@ -260,48 +259,79 @@ img {
 
 footer {
   display: flex;
-  background-color: #f7f3f3;
+  flex-direction: row;
   width: 100vw;
   height: 200px;
   color: $grey;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  padding: 30px 18% 0 18%;
-  gap: 200px;
+  gap: 20px;
+  padding-top: 30px;
 }
 
 .foot-p {
-  margin-top: 20px;
   font-size: 0.8em;
 }
 
 .btr {
-max-width: 100px;
+  width: 75px;
+  height: 50px;
+}
+
+.btr-div {
+  display: flex;
+  padding-left: 10%;
+}
+
+.foot-div {
+  color: $black;
+  padding-top: 30px;
+  font-size: 1.2em;
 }
 
 .spon-h {
   font-weight: 700;
+  color: #d3d3d3;
+
+}
+
+.spon-p-div {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .sponsor {
   display: flex;
+  flex-direction: column;
   gap: 5%;
 }
 
 hr {
   color: #ec5242;
-  width: 100%;
+  width: 30px;
+  height: 5px;
+  margin: 0 0 20px 0;
 }
 
 .partners {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: $black;
   width: 100vw;
+  height: fit-content;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-.sponsor > img {
+.line1 {
+  padding: 0 40% 0 40%;
+}
+
+.sponsor1>img {
   width: 60px;
   height: 60px;
+  margin: 20px;
 }
 
 #sp1 {
@@ -378,7 +408,7 @@ hr {
     display: none;
   }
 
-  .nav_container > ul {
+  .nav_container>ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
@@ -493,6 +523,18 @@ hr {
     display: none;
   }
 
+  .sponsor {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: $black;
+    width: 100vw;
+    height: fit-content;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
   footer {
     background-color: #f7f3f3;
     width: 100vw;
@@ -504,5 +546,21 @@ hr {
 
   .foot-p {
     color: $black;
+  }
+
+  .btr {
+    width: 75px;
+    height: 50px;
+  }
+  
+  .btr-div {
+    display: flex;
+    padding-left: 25%;
+  }
+  
+  .foot-div {
+    color: $black;
+    padding-top: 30px;
+    font-size: 1.2em;
   }
 }
