--- a/main.scss
+++ b/main.scss
@@ -24,12 +24,24 @@ h1 {
   display: none;
 }
 
-.nav_container>ul {
+.nav_container > ul {
   display: none;
 }
 
 .navbar {
   display: none;
+}
+
+.logo-small {
+  width: 50px;
+  height: 25px;
+
+}
+
+#small-logo {
+  width: 50px;
+  height: 25px;
+  margin-right: 105px;
 }
 
 .menu {
@@ -447,6 +459,17 @@ hr {
     border: 2px solid $orange;
     color: $orange;
     padding: 0 5px;
+  }
+
+  .logo-small {
+    width: 50px;
+    height: 25px;
+
+  }
+
+  #small-logo {
+    width: 50px;
+    height: 25px;
   }
 
   .nav-links :hover {
